@@ -1,3 +1,10 @@
+2013-01-14  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.12.0-digiumphones Released.
+
+	* Final non-security release of Asterisk 10. So long, and thanks for
+	  all the T.38 gateway faxes! (Where's my fishbowl?)
+
 2013-01-09  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.12.0-digiumphones-rc2 Released.
